# stereolabs_technical_test_tristan

./: readme.md  requirements.txt
models/: sky_segmentation_model_25_epochs.onnx  sky_segmentation_model_25_epochs.pth
src/: dataloader.py  inference.py  test.ipynb  training.py
src/Inference_skyseg_onnx_runtime_cpp/: CMakeLists.txt  main.cpp
src/Inference_skyseg_onnx_runtime_cpp/cmake/: Findonnxruntime.cmake
